--- a/styles/css/main_style.css
+++ b/styles/css/main_style.css
@@ -18,6 +18,35 @@ body {
   width: 50%;
   height: 100vh;
   border: 1px solid black;
+  overflow: scroll;
+}
+
+#playlist-table {
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+#playlist-table td,
+#playlist-table th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+#playlist-table tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+#playlist-table tr:hover {
+  background-color: #ddd;
+}
+
+#playlist-table th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #4CAF50;
+  color: white;
 }
 
 /*# sourceMappingURL=main_style.css.map */
