--- a/styles/scss/main_style.scss
+++ b/styles/scss/main_style.scss
@@ -28,6 +28,9 @@ body {
     //background-color: grey;
     //border-radius: 20px;
     overflow: scroll;
+    #playlist-image {
+        text-align: center;
+    }
 }
 
 #playlist-table {
