--- a/styles/css/main_style.css
+++ b/styles/css/main_style.css
@@ -1,51 +1,32 @@
 body {
   margin: 0;
   padding: 0;
+  background-color: #121212;
+  color: white;
 }
 
 #wrapper {
-  width: 100%;
+  width: 80%;
   margin: 0 auto;
+}
+#wrapper #top-container {
   display: flex;
 }
-
-#map {
-  width: 50%;
-  height: 100vh;
+#wrapper #map {
+  position: absolute;
+  top: 300px;
+  left: 500px;
+  z-index: 5;
+  width: 60%;
+  height: 500px;
+  display: none;
 }
-
-#playlist-container {
-  width: 50%;
-  height: 100vh;
-  border: 1px solid black;
-  overflow: scroll;
-}
-#playlist-container #playlist-image {
-  text-align: center;
-}
-
-#playlist-table {
-  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-  border-collapse: collapse;
+#wrapper #playlist-container {
   width: 100%;
+  height: 100vh;
 }
-
-#playlist-table td,
-#playlist-table th {
-  border: 1px solid #ddd;
-  padding: 8px;
-}
-
-#playlist-table tr:nth-child(even) {
-  background-color: #f2f2f2;
-}
-
-#playlist-table th {
-  padding-top: 12px;
-  padding-bottom: 12px;
-  text-align: left;
-  background-color: #4CAF50;
-  color: white;
+#wrapper #playlist-container #playlist-image {
+  text-align: center;
 }
 
 /*# sourceMappingURL=main_style.css.map */
