--- a/styles/scss/main_style.scss
+++ b/styles/scss/main_style.scss
@@ -1,61 +1,53 @@
 body {
     margin: 0;
     padding: 0;
+    background-color: #121212;
+    color: white;
 }
 
 #wrapper {
-    width: 100%;
+    width: 80%;
     margin: 0 auto;
-    display: flex;
-}
-
-#map {
-    //position: absolute;
-    width: 50%;
-    height: 100vh;
-    //z-index: 0;
-    //top: 150px;
-    //border-radius: 20px;
-}
-
-#playlist-container {
-    //position: absolute;
-    //z-index: 20;
-    width: 50%;
-    height: 100vh;
-    //left: 900px;
-    border: 1px solid black;
-    //background-color: grey;
-    //border-radius: 20px;
-    overflow: scroll;
-    #playlist-image {
-        text-align: center;
+    #top-container {
+        display: flex;
     }
-}
-
-#playlist-table {
-    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-    border-collapse: collapse;
-    width: 100%;
-}
-
-#playlist-table td,
-#playlist-table th {
-    border: 1px solid #ddd;
-    padding: 8px;
-}
-
-#playlist-table tr:nth-child(even) {
-    background-color: #f2f2f2;
-}
-
-// #playlist-table tr:hover {
-//     background-color: #ddd;
-// }
-#playlist-table th {
-    padding-top: 12px;
-    padding-bottom: 12px;
-    text-align: left;
-    background-color: #4CAF50;
-    color: white;
+    #map {
+        position: absolute;
+        top: 300px;
+        left: 500px;
+        z-index: 5;
+        width: 60%;
+        height: 500px;
+        display: none;
+    }
+    #playlist-container {
+        width: 100%;
+        height: 100vh;
+        //border: 1px solid black;
+        #playlist-image {
+            text-align: center;
+        }
+        // #playlist-table {
+        //     border-collapse: collapse;
+        //     width: 100%;
+        // }
+        // #playlist-table td,
+        // #playlist-table th {
+        //     border: 1px solid #ddd;
+        //     padding: 8px;
+        // }
+        // #playlist-table tr:nth-child(even) {
+        //     background-color: #f2f2f2;
+        // }
+        // #playlist-table tr:hover {
+        //     background-color: #ddd;
+        // }
+        // #playlist-table th {
+        //     padding-top: 12px;
+        //     padding-bottom: 12px;
+        //     text-align: left;
+        //     background-color: #4CAF50;
+        //     color: white;
+        // }
+    }
 }
