--- a/styles/css/main_style.css
+++ b/styles/css/main_style.css
@@ -2,15 +2,29 @@ body {
   margin: 0;
   padding: 0;
   background-color: #121212;
-  color: white;
+  background: black;
+  background: linear-gradient(0deg, black 0%, #141416 90%, #363d3e 100%);
+  color: rgba(255, 255, 255, 0.432);
+  font-family: "Montserrat", sans-serif;
 }
 
 #wrapper {
-  width: 80%;
+  width: 60%;
   margin: 0 auto;
+  background-color: #1a1818;
+  padding: 15px;
 }
 #wrapper #top-container {
   display: flex;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+  padding-bottom: 20px;
+  margin-bottom: 20px;
+}
+#wrapper #right-container {
+  margin-left: 20px;
+}
+#wrapper #tbottom-container {
+  height: 100vh;
 }
 #wrapper #map {
   position: absolute;
@@ -23,10 +37,19 @@ body {
 }
 #wrapper #playlist-container {
   width: 100%;
-  height: 100vh;
 }
 #wrapper #playlist-container #playlist-image {
   text-align: center;
+  overflow: hidden;
+}
+#wrapper #playlist-container #playlist-table {
+  border-collapse: collapse;
+  width: 100%;
+}
+#wrapper #playlist-container #playlist-table td,
+#wrapper #playlist-container #playlist-table th {
+  border: 1px solid #ddd;
+  padding: 8px;
 }
 
 /*# sourceMappingURL=main_style.css.map */
