--- a/styles/scss/main_style.scss
+++ b/styles/scss/main_style.scss
@@ -2,14 +2,28 @@ body {
     margin: 0;
     padding: 0;
     background-color: #121212;
-    color: white;
+    background: rgb(0, 0, 0);
+    background: linear-gradient(0deg, rgba(0, 0, 0, 1) 0%, rgba(20, 20, 22, 1) 90%, rgba(54, 61, 62, 1) 100%);
+    color: rgba(255, 255, 255, 0.432);
+    font-family: 'Montserrat', sans-serif;
 }
 
 #wrapper {
-    width: 80%;
+    width: 60%;
     margin: 0 auto;
+    background-color: #1a1818;
+    padding: 15px;
     #top-container {
         display: flex;
+        border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+        padding-bottom: 20px;
+        margin-bottom: 20px;
+    }
+    #right-container {
+        margin-left: 20px;
+    }
+    #tbottom-container {
+        height: 100vh;
     }
     #map {
         position: absolute;
@@ -22,20 +36,22 @@ body {
     }
     #playlist-container {
         width: 100%;
-        height: 100vh;
         //border: 1px solid black;
         #playlist-image {
             text-align: center;
+            //border-radius: 5px;
+            overflow: hidden;
+            //border: 4px solid rgba(255, 255, 255, 0.829);
         }
-        // #playlist-table {
-        //     border-collapse: collapse;
-        //     width: 100%;
-        // }
-        // #playlist-table td,
-        // #playlist-table th {
-        //     border: 1px solid #ddd;
-        //     padding: 8px;
-        // }
+        #playlist-table {
+            border-collapse: collapse;
+            width: 100%;
+        }
+        #playlist-table td,
+        #playlist-table th {
+            border: 1px solid #ddd;
+            padding: 8px;
+        }
         // #playlist-table tr:nth-child(even) {
         //     background-color: #f2f2f2;
         // }
