--- a/styles/css/main_style.css
+++ b/styles/css/main_style.css
@@ -23,6 +23,12 @@ body {
 #wrapper #right-container {
   margin-left: 20px;
 }
+#wrapper #right-container #mapAppearButton img {
+  transition: 0.3s ease-in;
+}
+#wrapper #right-container #mapAppearButton img:hover {
+  transform: scale(1.2);
+}
 #wrapper #tbottom-container {
   height: 100vh;
 }
@@ -59,10 +65,12 @@ body {
 #wrapper #playlist-container #playlist-table td,
 #wrapper #playlist-container #playlist-table th {
   padding: 8px;
-  font-size: 0.8em;
+  font-size: 0.7em;
+  font-weight: 700;
+  word-wrap: break-word;
 }
 #wrapper #playlist-container #playlist-table tr {
-  transition: 0.5s ease-in;
+  transition: 0.2s ease-in;
 }
 #wrapper #playlist-container #playlist-table tr:hover {
   background-color: rgba(221, 221, 221, 0.24);
