--- a/styles/scss/main_style.scss
+++ b/styles/scss/main_style.scss
@@ -21,6 +21,14 @@ body {
     }
     #right-container {
         margin-left: 20px;
+        #mapAppearButton {
+            img {
+                transition: 0.3s ease-in;
+                &:hover {
+                    transform: scale(1.2);
+                }
+            }
+        }
     }
     #tbottom-container {
         height: 100vh;
@@ -63,10 +71,12 @@ body {
         #playlist-table th {
             //border: 1px solid #ddd;
             padding: 8px;
-            font-size: 0.8em;
+            font-size: 0.7em;
+            font-weight: 700;
+            word-wrap: break-word;
         }
         #playlist-table tr {
-            transition: 0.5s ease-in;
+            transition: 0.2s ease-in;
             &:hover {
                 background-color: rgba(221, 221, 221, 0.24);
                 //transform: scale(1.05);
