--- a/styles/css/main_style.css
+++ b/styles/css/main_style.css
@@ -5,6 +5,8 @@ body {
   background: black;
   background: linear-gradient(0deg, black 0%, #141416 90%, #363d3e 100%);
   color: rgba(255, 255, 255, 0.432);
+  background-attachment: fixed;
+  background-repeat: no-repeat;
   font-family: "Montserrat", sans-serif;
 }
 
@@ -28,9 +30,6 @@ body {
 }
 #wrapper #right-container #mapAppearButton img:hover {
   transform: scale(1.2);
-}
-#wrapper #tbottom-container {
-  height: 100vh;
 }
 #wrapper #map {
   position: absolute;
@@ -83,8 +82,12 @@ body {
   color: white;
 }
 #wrapper #footer {
-  color: white;
+  margin-top: 10px;
+  padding-top: 10px;
+  border-top: 1px solid rgba(255, 255, 255, 0.5);
+  color: rgba(255, 255, 255, 0.5);
   text-align: center;
+  font-size: 0.75em;
 }
 
 /*# sourceMappingURL=main_style.css.map */
