--- a/styles/scss/main_style.scss
+++ b/styles/scss/main_style.scss
@@ -106,7 +106,7 @@ body {
             padding-top: 12px;
             padding-bottom: 12px;
             text-align: left;
-            background-color: #4CAF50;
+            background-color: rgba(76, 175, 79, 0.8);
             color: white;
         }
     }
