changed duration text in header with a clock symbol

--- a/styles/css/main_style.css
+++ b/styles/css/main_style.css
@@ -25,6 +25,10 @@ body {
 #wrapper #right-container {
   margin-left: 20px;
 }
+#wrapper #right-container h2 {
+  color: white;
+  font-size: 2em;
+}
 #wrapper #right-container #mapAppearButton img {
   transition: 0.3s ease-in;
 }
