--- a/styles/scss/main_style.scss
+++ b/styles/scss/main_style.scss
@@ -23,6 +23,10 @@ body {
     }
     #right-container {
         margin-left: 20px;
+        h2 {
+            color: white;
+            font-size: 2em;
+        }
         #mapAppearButton {
             img {
                 transition: 0.3s ease-in;
