--- a/styles/scss/main_style.scss
+++ b/styles/scss/main_style.scss
@@ -52,13 +52,19 @@ body {
         #mapdisappearButton {
             position: absolute;
             right: 0;
+            letter-spacing: 2px;
+            border-bottom-left-radius: 15px;
             padding-top: 12px;
             padding-bottom: 12px;
             text-align: left;
-            background-color: #4CAF50;
+            background-color: rgba(76, 175, 79, 0.5);
             color: white;
             border: none;
             z-index: 3;
+            transition: 0.2s ease-in-out;
+            &:hover {
+                background-color: #4CAF50;
+            }
         }
     }
     #playlist-container {
