styled the login button

--- a/styles/css/main_style.css
+++ b/styles/css/main_style.css
@@ -32,8 +32,25 @@ body {
   color: white;
   font-size: 2em;
 }
-#wrapper #right-container #mapAppearButton {
-  padding-top: 30px;
+#wrapper #right-container .buttonbox {
+  display: flex;
+  width: 45%;
+  justify-content: space-between;
+  padding-top: 20px;
+}
+#wrapper #right-container #loginbutton {
+  border: none;
+  background-color: #4caf4f;
+  color: white;
+  font-size: 1.1em;
+  border-radius: 15px;
+  padding: 5px 15px 5px 15px;
+  margin-left: 10px;
+  transition: 0.3s ease-in;
+}
+#wrapper #right-container #loginbutton:hover {
+  background-color: #337a36;
+  transform: scale(1.1);
 }
 #wrapper #right-container #mapAppearButton img {
   transition: 0.3s ease-in;
