added visibility property to map so that when you load the page for the first time, it will not show the map so that you can chose between clickin on the globe or logib ib if the key is expired

--- a/styles/scss/main_style.scss
+++ b/styles/scss/main_style.scss
@@ -65,7 +65,7 @@ body {
         top: 15px;
         right: 305px;
         z-index: 2;
-        //display: none;
+        visibility: hidden;
         width: 40%;
         height: 300px;
         //border-radius: 20px;
