added extra text to p of bottom container explaining more about the functionality of the webpage

--- a/styles/css/main_style.css
+++ b/styles/css/main_style.css
@@ -105,6 +105,7 @@ body {
 }
 #wrapper #playlist-container #bottom-container p {
   text-align: center;
+  padding: 0 120px;
 }
 #wrapper #playlist-container #playlist-image {
   text-align: center;
