--- a/styles/scss/main_style.scss
+++ b/styles/scss/main_style.scss
@@ -109,6 +109,7 @@ body {
         #bottom-container {
             p {
                 text-align: center;
+                padding: 0 120px;
             }
         }
         #playlist-image {
